--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   - docker push mj6k/multi-nginx
   - docker push mj6k/multi-server
   - docker push mj6k/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'multi-docker'
+  env: 'Multidocker-env'
+  bucket_name: 'elasticbeanstalk-eu-central-1-716420058024'
+  bucket_path: 'docker-multi'
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
